# vortex

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build-by-tag.yaml
api/: Cargo.toml
api/src/: ice_candidate.rs  lib.rs  media_type.rs  negotiation.rs  remote_track.rs  server_error.rs
rtc/: Cargo.toml
rtc/src/: lib.rs  peer.rs  room.rs
rtc/src/peer/: events.rs  negotiation.rs
signaling/: Cargo.toml
signaling/src/: client.rs  lib.rs  packets.rs  sender.rs  server.rs
src/rtc/peer/: events.rs
src/signaling/: packets.rs
tests/: integration.rs
vortex/: Cargo.toml  config.toml
vortex/src/: main.rs  settings.rs
