[workspace]
resolver = "2"

members = [
    "vortex",
    "signaling",
    "rtc", "api",
]

[workspace.dependencies]
# Error Handling
anyhow = "1.0.89"
thiserror = "1.0.64"

# WebRTC
webrtc = "0.11.0"

# Serde
serde_json = "1.0.129"
serde = { version = "1.0.210", features = ["derive"] }

# Async
postage = "0.5.0"
futures = "0.3.31"
async-broadcast = "0.7.1"
tokio-tungstenite = "0.24.0"
tokio = { version = "1.40.0", features = ["full"] }

# Lang
log = "0.4.22"
dashmap = "6.1.0"
lazy_static = "1.5.0"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
env_logger = "0.11.5"
